[FIX] fix X button positioning on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ i{
 /* Tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
     #close-overlay {
-        right: 50px;
+        right: 10px;
     }
     
     i {
